--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </section>
     </main>
     <footer>
-        <p>© 2025 Nome da Empresa. Todos os direitos reservados.</p>
+        <p>© 2025 Eletropel Distribuidora de Auto Peças. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
